Tomee im war-pom

--- a/WAR/pom.xml
+++ b/WAR/pom.xml
@@ -47,6 +47,18 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+
+            <plugin>
+            	<groupId>org.apache.openejb.maven</groupId>
+      				<artifactId>tomee-maven-plugin</artifactId>
+      				<version>1.7.1</version>
+      				<inherited>false</inherited>
+      				<configuration>
+        				<tomeeVersion>1.7.1</tomeeVersion>
+        				<tomeeClassifier>plus</tomeeClassifier>
+
+      				</configuration>
+    				 </plugin>
 <!--             <plugin> -->
 <!--                 <groupId>org.apache.maven.plugins</groupId> -->
 <!--                 <artifactId>maven-dependency-plugin</artifactId> -->
